--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
-  <meta name="description" content="Find us online!">
-  <meta name="author" content="Seth Cottle">
+  <title>Sabry Tarek</title>
+  <meta name="description" content="λ DevOps Engineer λ">
+  <meta name="author" content="Sabry Tarek">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -28,7 +28,7 @@
          Light:  css/skeleton-light.css
          Dark:   css/skeleton-dark.css
   -->
-  <link rel="stylesheet" href="css/skeleton-auto.css">
+  <link rel="stylesheet" href="css/skeleton-dark.css">
 
   <link rel="stylesheet" href="css/brands.css">
 
@@ -69,10 +69,10 @@
         <img src="images/avatar.png" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>Sabry Tarek</h1>
 
         <!-- Short Bio -->
-        <p>LittleLink is an open source DIY alternative to services like <a href="https://linktr.ee" target="_blank" rel="noopener">Linktree</a> and <a href="https://many.link" target="_blank" rel="noopener">many.link</a>. LittleLink was built using <a href="http://www.getskeleton.com" target="_blank" rel="noopener">Skeleton</a>, a dead simple, responsive boilerplate—we've just created some branded buttons and stripped out the things you won't need. 😊</p>
+        <p> Software Engineer λ | Open Source Contributor | FreeLancer | Content Creator | Homelab Owner | Maker | Full Nerd 😊</p>
 
         <!--
 
@@ -101,37 +101,37 @@
         -->
 
         <!-- GitHub -->
-        <a class="button button-github" href="#" target="_blank" rel="noopener">
+        <a class="button button-github" href="https://github.com/SabryTarek/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
 
         <!-- Twitter -->
-        <a class="button button-twit" href="#" target="_blank" rel="noopener">
+        <a class="button button-twit" href="https://twitter.com/Sabry_ALzahar/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitter.svg" alt="Twitter Logo">Twitter</a>
         <br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="#" target="_blank" rel="noopener">
+        <a class="button button-instagram" href="https://www.instagram.com/secalipso/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
         <!-- Facebook -->
-        <a class="button button-faceb" href="#" target="_blank" rel="noopener">
+        <a class="button button-faceb" href="https://www.facebook.com/sabryALzahar/" target="_blank" rel="noopener">
             <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
         <br>
 
         <!-- Facebook Messenger -->
-        <a class="button button-messenger" href="#" target="_blank" rel="noopener">
+        <a class="button button-messenger" href="https://www.messenger.com/t/100003896297154/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/messenger.svg" alt="Facebook Messenger Logo">Chat on Messenger</a>
         <br>
 
         <!-- LinkedIn -->
-        <a class="button button-linked" href="#" target="_blank" rel="noopener">
+        <a class="button button-linked" href="https://www.linkedin.com/in/sabry-tarek/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/linkedin.svg" alt="LinkedIn Logo">LinkedIn</a>
         <br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener">
+        <a class="button button-yt" href="https://www.youtube.com/channel/UCnxhFcoqmfDAbHYG4In2TTQ" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
         <br>
 
@@ -161,7 +161,7 @@
         <br>
 
         <!-- Reddit -->
-        <a class="button button-reddit" href="#" target="_blank" rel="noopener">
+        <a class="button button-reddit" href="https://www.reddit.com/user/SabryTarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a>
         <br>
 
@@ -186,12 +186,12 @@
         <br>
 
         <!-- Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
+        <a class="button button-default" href="ss.tarek97@gmail.com" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
         <br>
 
         <!-- Email Alternative -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
+        <a class="button button-default" href="sabry.disroot.org" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email_alt.svg" alt="Email Icon">hello@littlelink.io</a>
         <br>
 
@@ -371,7 +371,7 @@
         <br>
 
         <br>
-        <p>Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+
 
       </div>
     </div>
