--- a/index.html
+++ b/index.html
@@ -187,16 +187,16 @@
 
         <!-- Email -->
         <a class="button button-default" href="ss.tarek97@gmail.com" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/email.svg" alt="Email Icon">hello@littlelink.io</a>
+            <img class="icon" src="images/icons/email.svg" alt="Email Icon">ss.tarek97@gmail.com</a>
         <br>
 
         <!-- Email Alternative -->
         <a class="button button-default" href="sabry.disroot.org" target="_blank" rel="noopener">
-            <img class="icon" src="images/icons/email_alt.svg" alt="Email Icon">hello@littlelink.io</a>
+            <img class="icon" src="images/icons/email_alt.svg" alt="Email Icon">sabry.disroot.org</a>
         <br>
 
         <!-- Blog -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener">
+        <a class="button button-default" href="https://sabrytarek.netlify.app/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/blog.svg" alt="Blog Icon">Blog</a>
         <br>
 
@@ -286,7 +286,7 @@
         <br>
 
         <!-- Gitlab -->
-        <a class="button button-gitlab" href="#" target="_blank" rel="noopener">
+        <a class="button button-gitlab" href="https://gitlab.com/sabry_tarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
         <br>
 
