--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <!-- Facebook -->
         <a class="button button-faceb" href="https://www.facebook.com/sabryALzahar/" target="_blank" rel="noopener">
-            <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Find us on Facebook</a>
+            <img class="icon"src="images/icons/facebook.svg" alt="Facebook Logo">Facebook</a>
         <br>
 
         <!-- Facebook Messenger -->
@@ -371,12 +371,16 @@
         <br>
 
         <br>
-
-
+        <br>
+        <br>
+        
+        <!-- CopyRights -->
+        <p class="footer">Sabry Tarek © 2022</p>
       </div>
     </div>
   </div>
-
+        <br>
+        <br>
   <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
