--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         -->
 
         <!-- GitHub -->
-        <a class="button button-github" href="https://github.com/SabryTarek/" target="_blank" rel="noopener">
+        <a class="button button-github" href="https://github.com/sabrytarek/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
         <br>
 
@@ -136,54 +136,54 @@
         <br>
 
         <!-- Discord -->
-        <a class="button button-discord" href="#" target="_blank" rel="noopener">
+        <a class="button button-discord" href="https://discordapp.com/users/9068" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
         <br>
 
         <!-- Twitch -->
-        <a class="button button-twitch" href="#" target="_blank" rel="noopener">
+        <a class="button button-twitch" href="https://www.twitch.tv/sabry_tarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/twitch.svg" alt="Twitch Logo">Twitch</a>
         <br>
 
         <!-- ProductHunt -->
-        <a class="button button-producthunt" href="#" target="_blank" rel="noopener">
+        <a class="button button-producthunt" href="https://www.producthunt.com/@sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/producthunt.svg" alt="Product Hunt Logo">Product Hunt</a>
         <br>
 
-        <!-- Snapchat -->
+<!--         <!-- Snapchat -->
         <a class="button button-snapchat" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/snapchat.svg" alt="Snapchat Logo">Snapchat</a>
-        <br>
+        <br> -->
 
-        <!-- Spotify -->
+<!--         <!-- Spotify -->
         <a class="button button-spotify" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Spotify</a>
-        <br>
+        <br> -->
 
         <!-- Reddit -->
-        <a class="button button-reddit" href="https://www.reddit.com/user/SabryTarek" target="_blank" rel="noopener">
+        <a class="button button-reddit" href="https://www.reddit.com/user/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/reddit.svg" alt="Reddit Logo">Reddit</a>
         <br>
 
         <!-- Mastodon -->
-        <a class="button button-mastodon" href="#" target="_blank" rel="noopener">
+        <a class="button button-mastodon" href="https://mastodon.social/@sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/mastodon.svg" alt="Mastodon Logo">Mastodon</a>
         <br>
 
         <!-- Medium -->
-        <a class="button button-medium" href="#" target="_blank" rel="noopener">
+        <a class="button button-medium" href="	https://medium.com/@sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/medium.svg" alt="Medium Logo">Medium</a>
         <br>
 
         <!-- Pinterest -->
-        <a class="button button-pinterest" href="#" target="_blank" rel="noopener">
+        <a class="button button-pinterest" href="https://pin.it/1rLUa2Q" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/pinterest.svg" alt="Pinterest Logo">Follow on Pinterest</a>
         <br>
-
+<!-- 
         <!-- TikTok -->
         <a class="button button-tiktok" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
-        <br>
+        <br> -->
 
         <!-- Email -->
         <a class="button button-default" href="ss.tarek97@gmail.com" target="_blank" rel="noopener">
@@ -201,107 +201,107 @@
         <br>
 
         <!-- SoundCloud -->
-        <a class="button button-soundcloud" href="#" target="_blank" rel="noopener">
+        <a class="button button-soundcloud" href="https://soundcloud.com/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
         <br>
 
         <!-- Figma -->
-        <a class="button button-figma" href="#" target="_blank" rel="noopener">
+        <a class="button button-figma" href="https://www.figma.com/@sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/figma.svg" alt="Figma Logo">Figma</a>
         <br>
 
-        <!-- Kit -->
+<!--         <!-- Kit -->
         <a class="button button-kit" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/kit.svg" alt="Kit Logo">Kit</a>
-        <br>
+        <br> -->
 
         <!-- Telegram -->
-        <a class="button button-telegram" href="#" target="_blank" rel="noopener">
+        <a class="button button-telegram" href="https://t.me/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/telegram.svg" alt="Telegram Logo">Telegram</a>
         <br>
-
+<!-- 
         <!-- LittleLink -->
         <a class="button button-default" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/littlelink.svg" alt="LittleLink Logo">LittleLink</a>
-        <br>
+        <br> -->
 
-        <!-- Trello -->
+<!--         <!-- Trello -->
         <a class="button button-trello" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/trello.svg" alt="Trello Logo">Trello</a>
         <br>
-
-        <!-- Notion -->
+ -->
+<!--         <!-- Notion -->
         <a class="button button-notion" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/notion.svg" alt="Notion Logo">Notion</a>
-        <br>
+        <br> -->
 
         <!-- Kickstarter -->
-        <a class="button button-kickstarter" href="#" target="_blank" rel="noopener">
+        <a class="button button-kickstarter" href="https://www.kickstarter.com/profile/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/kickstarter.svg" alt="Kickstarter Logo">Kickstarter</a>
         <br>
-
+<!-- 
         <!-- Etsy -->
         <a class="button button-etsy" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/etsy.svg" alt="Etsy Logo">Etsy</a>
-        <br>
+        <br> -->
 
         <!-- Tumblr -->
-        <a class="button button-tumb" href="#" target="_blank" rel="noopener">
+        <a class="button button-tumb" href="https://www.tumblr.com/blog/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/tumblr.svg" alt="Tumblr Logo">Tumblr</a>
         <br>
 
         <!-- Steam -->
-        <a class="button button-steam" href="#" target="_blank" rel="noopener">
+        <a class="button button-steam" href="https://steamcommunity.com/profiles/76561199346285886/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/steam.svg" alt="Steam Logo">Steam</a>
         <br>
 
         <!-- Vimeo -->
-        <a class="button button-vimeo" href="#" target="_blank" rel="noopener">
+        <a class="button button-vimeo" href="https://vimeo.com/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/vimeo.svg" alt="Vimeo Logo">Vimeo</a>
         <br>
 
         <!-- PayPal-->
-        <a class="button button-paypal" href="#" target="_blank" rel="noopener">
+        <a class="button button-paypal" href="paypal.me/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a>
         <br>
 
         <!-- WhatsApp -->
-        <a class="button button-whatsapp" href="#" target="_blank" rel="noopener">
+        <a class="button button-whatsapp" href="https://wa.me/201062730971" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
         <br>
 
-        <!-- Wordpress -->
+<!--         <!-- Wordpress -->
         <a class="button button-wordpress" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/wordpress.svg" alt="Wordpress Logo">Wordpress</a>
-        <br>
+        <br> -->
 
         <!-- Goodreads -->
-        <a class="button button-goodreads" href="#" target="_blank" rel="noopener">
+        <a class="button button-goodreads" href="https://www.goodreads.com/user/show/32435467-sabry-tarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/goodreads.svg" alt="Goodreads Logo">Goodreads</a>
         <br>
 
-        <!-- Skoob -->
+<!--         <!-- Skoob -->
         <a class="button button-skoob" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/skoob.svg" alt="Skoob Logo">Skoob</a>
-        <br>
+        <br> -->
 
         <!-- Gitlab -->
         <a class="button button-gitlab" href="https://gitlab.com/sabry_tarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/gitlab.svg" alt="GitLab Logo">GitLab</a>
         <br>
 
-        <!-- XING -->
+<!--         <!-- XING -->
         <a class="button button-xing" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/xing.svg" alt="xing Logo">Xing</a>
-        <br>
+        <br> -->
 
         <!-- Bandcamp -->
-        <a class="button button-bandcamp" href="#" target="_blank" rel="noopener">
+        <a class="button button-bandcamp" href="https://bandcamp.com/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/bandcamp.svg" alt="Bandcamp Logo">Bandcamp</a>
         <br>
 
         <!-- Patreon -->
-        <a class="button button-patreon" href="#" target="_blank" rel="noopener">
+        <a class="button button-patreon" href="https://www.patreon.com/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/patreon.svg" alt="Patreon Logo">Patreon</a>
         <br>
 
@@ -310,65 +310,65 @@
             <img class="icon" src="images/icons/signal.svg" alt="Signal Logo">Signal</a>
         <br>
 
-        <!-- Apple App Store -->
+<!--         <!-- Apple App Store -->
         <a class="button button-appstore" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/appstore.svg" alt="Apple App Store Logo">Apple App Store</a>
-        <br>
-
+        <br> -->
+<!-- 
         <!-- Google Play Store  -->
         <a class="button button-playstore" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/playstore.svg" alt="Google Play Store Logo">Google Play Store</a>
-        <br>
+        <br> -->
 
         <!-- Amazon  -->
         <a class="button button-amazon" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/amazon.svg" alt="Amazon Logo">Amazon</a>
         <br>
                 
-        <!-- Venmo -->
+<!--         <!-- Venmo -->
         <a class="button button-venmo" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/venmo.svg" alt="Venmo Logo">Venmo</a>
-        <br>
+        <br> -->
 
-        <!-- Cash App Dollar -->
+<!--         <!-- Cash App Dollar -->
         <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/cashapp_dollar.svg" alt="Cash App Logo">Cash App Dollar</a>
-        <br>
+        <br> -->
 
-        <!-- Cash App Pound -->
+<!--         <!-- Cash App Pound -->
         <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/cashapp_pound.svg" alt="Cash App Logo">Cash App Pound</a>
-        <br>
-
+        <br> -->
+<!-- 
         <!-- Cash App BTC -->
         <a class="button button-cashapp" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/cashapp_btc.svg" alt="Cash App Logo">Cash App Bitcoin</a>
-        <br>
+        <br> -->
 
         <!-- dev.to -->
-        <a class="button button-dev-to" href="#" target="_blank" rel="noopener">
+        <a class="button button-dev-to" href="https://dev.to/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/dev_to.svg" alt="dev.to Logo">dev.to</a>
         <br>
 
-        <!-- OnlyFans -->
+<!--         <!-- OnlyFans -->
         <a class="button button-onlyfans" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/onlyfans.svg" alt="Only Fans Logo">OnlyFans (18+)</a>
-        <br>
+        <br> -->
 
         <!-- Web -->
-        <a class="button button-web" href="#" target="_blank" rel="noopener">
+        <a class="button button-web" href="https://sabrytarek.netlify.app/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/web.svg" alt="Web Logo">Website</a>
         <br>
 
         <!-- Buy Me a Coffee -->
-        <a class="button button-coffee" href="#" target="_blank" rel="noopener">
+        <a class="button button-coffee" href="https://www.buymeacoffee.com/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
         <br>
 
-        <!-- VRChat -->
+<!--         <!-- VRChat -->
         <a class="button button-vrchat" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/vrchat.svg" alt="VRChat Logo">VRChat</a>
-        <br>
+        <br> -->
 
         <br>
         <br>
