--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <br>
 
         <!-- PayPal-->
-        <a class="button button-paypal" href="paypal.me/sabrytarek" target="_blank" rel="noopener">
+        <a class="button button-paypal" href="https://paypal.me/sabrytarek" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/paypal.svg" alt="PayPal Logo">PayPal</a>
         <br>
 
@@ -322,9 +322,9 @@
         <br> -->
 
         <!-- Amazon  -->
-        <a class="button button-amazon" href="#" target="_blank" rel="noopener">
+        <!--  <a class="button button-amazon" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/amazon.svg" alt="Amazon Logo">Amazon</a>
-        <br>
+        <br> -->
                 
         <!-- Venmo -->
         <!--  <a class="button button-venmo" href="#" target="_blank" rel="noopener">
