--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
         <br> -->
 
         <!-- Email -->
-        <a class="button button-default" href="ss.tarek97@gmail.com" target="_blank" rel="noopener">
+        <a class="button button-default" href="mailto:ss.tarek97@gmail.com" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email.svg" alt="Email Icon">ss.tarek97@gmail.com</a>
         <br>
 
         <!-- Email Alternative -->
-        <a class="button button-default" href="sabry.disroot.org" target="_blank" rel="noopener">
+        <a class="button button-default" href="mailto:sabry.disroot.org" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email_alt.svg" alt="Email Icon">sabry.disroot.org</a>
         <br>
 
