--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
           3.) alt="Example Logo" | This alt attribute helps provides alternate text for an image, this can assist users who use screen readers. 
 
         -->
-
+        <!-- CV -->
+        <a class="button button-github" href="https://drive.google.com/file/d/16KZ5SD114m6NWI4Ej014J8qGo2gfzGaD/view?usp=sharing" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/cv.svg" alt="CV Logo">CV</a>
+        <br>
+        
         <!-- GitHub -->
         <a class="button button-github" href="https://github.com/sabrytarek/" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/github.svg" alt="GitHub Logo">GitHub</a>
