--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         -->
         <!-- CV -->
-        <a class="button button-github" href="https://drive.google.com/file/d/16KZ5SD114m6NWI4Ej014J8qGo2gfzGaD/view?usp=sharing" target="_blank" rel="noopener">
+        <a class="button button-cv" href="https://drive.google.com/file/d/16KZ5SD114m6NWI4Ej014J8qGo2gfzGaD/view?usp=sharing" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/cv.svg" alt="CV Logo">CV</a>
         <br>
         
