--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
+  <script defer data-domain="sabry.vercel.app" src="http://ip172-18-0-59-cf9htle3tccg00bm522g-8000.direct.labs.play-with-docker.com/js/script.js"></script>
 
 </head>
 
