--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
   
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <script defer data-domain="sabry.vercel.app" src="http://ip172-18-0-59-cf9htle3tccg00bm522g-8000.direct.labs.play-with-docker.com/js/script.js"></script>
+  <script defer data-domain="sabry.vercel.app" src="https://linear-badger-x6x8k7.cygyertl.traefikhub.io/js/script.js"></script>
+
 
 </head>
 
