--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
         <br>
 
         <!-- OnlyFans -->
-        <a class="button button-onlyfans" href="#" target="_blank" rel="noopener">
+<!--         <a class="button button-onlyfans" href="#" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/onlyfans.svg" alt="Only Fans Logo">OnlyFans (18+)</a>
-        <br>
+        <br> -->
 
         <!-- Web -->
         <a class="button button-web" href="https://sabrytarek.netlify.app/" target="_blank" rel="noopener">
