--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
   
-  <script defer data-domain="sabry.vercel.app" src="https://linear-badger-x6x8k7.cygyertl.traefikhub.io/js/script.js"></script>
-
+<!--   <script defer data-domain="sabry.vercel.app" src="https://linear-badger-x6x8k7.cygyertl.traefikhub.io/js/script.js"></script> -->
+  <script defer data-domain="sabry.vercel.app" src="https://plausible.elite-link.org/js/script.js"></script>
 
 </head>
 
