Update CV and email

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         -->
         <!-- CV -->
-        <a class="button button-cv" href="https://drive.google.com/file/d/16KZ5SD114m6NWI4Ej014J8qGo2gfzGaD/view?usp=sharing" target="_blank" rel="noopener">
+        <a class="button button-cv" href="https://drive.google.com/file/d/1DmPSTshthS-QnjuTskRjMaCv4jgMssKC/view?usp=sharing" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/cv.svg" alt="CV Logo">CV</a>
         <br>
         
@@ -193,7 +193,7 @@
         <br> -->
 
         <!-- Email -->
-        <a class="button button-default" href="mailto:ss.tarek97@gmail.com" target="_blank" rel="noopener">
+        <a class="button button-default" href="mailto:sabry.tarek.devops@gmail.com" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/email.svg" alt="Email Icon">ss.tarek97@gmail.com</a>
         <br>
 
